# IDJ-2023-2

./: .gitignore  CMakeLists.txt  JOGO  README.md  makefile  mushroom-idle.xcf  warrioe-idle.xcf
assets/img/Bargudin/: Ataque.rar  Idle BargudinPNG.rar
assets/img/Javtalista/Javaptalista Caminhada/: Javaptalista Caminhada.rar
assets/img/Javtalista/Javaptalista Idle/: Monstro Idle.rar
assets/img/Javtalista/Javptalista Ataque/: Monstro Ataque.rar
assets/img/Menu/main-menu/: Indicator.psd
assets/img/Ranger/: newIdle.xcf
assets/img/Warrior/: RunBack.psd  newRun.psd
assets/joao/: Idle Alex PNG.rar
assets/psd/: ActionMenuSelector.psd  Indicator.psd  Porco-newRun.psd  Porco-newRunBack.psd  Warrior-NewAttack1.psd  Warrior-NewAttack1Volta.psd  bargudin-atack-back.psd  bargudin-atack.psd  bargudin-newidle.psd  bargudin-run-back.psd  bargudin-run.psd  porco-atack.psd  porco-idle.psd  skill.psd
dep/: Game.d  Music.d  Sprite.d  State.d  main.d
include/: Alien.hpp  BattleState.hpp  Boss.hpp  Bullet.hpp  Camera.hpp  CameraFollower.hpp  Character.hpp  Collider.hpp  Component.hpp  EndState.hpp  Face.hpp  Game.hpp  GameObject.hpp  InputManager.hpp  Minion.hpp  Mushroom.hpp  Music.hpp  PenguinBody.hpp  Porco.hpp  Rect.hpp  Resources.hpp  Sound.hpp  Sprite.hpp  StageState.hpp  State.hpp  Text.hpp  TileMap.hpp  TileSet.hpp  TileState.hpp  Timer.hpp  Vec2.hpp  constants.hpp  my_utility.hpp
include/Animation/: Animation.hpp  AnimationPhase.hpp
include/Characters/: Alex.hpp  Bargudin.hpp  Ranger.hpp  Warrior.hpp
include/Entities/: Entity.hpp
include/Menu/: ActionMenu.hpp  Button.hpp  HealthBar.hpp  ManaBar.hpp
include/Menu/Buttons/: AttackButton.hpp  DefendButton.hpp  SkillButton.hpp
include/Menu/healthBar/: BlueBar.hpp  GreenBar.hpp  OutlineBar.hpp  RedBar.hpp
include/Penguin/: Alien.hpp  Bullet.hpp  Minion.hpp  PenguinBody.hpp  PenguinCannon.hpp  StageState.hpp  TileMap.hpp
include/States/: BattleState.hpp  DifficultyState.hpp  EndState.hpp  TitleState.hpp
include/UI/: ActionMenuSelector.hpp  BlinkingText.hpp  CharacterIndicator.hpp  ClickBall.hpp  DamageText.hpp  HealText.hpp  MpGainText.hpp  MpLostText.hpp
include/UI/Menu/: ActionMenu.hpp  HealthBar.hpp  ManaBar.hpp
include/UI/Menu/Buttons/: AttackButton.hpp  DefendButton.hpp  SkillButton.hpp
include/UI/Menu/healthBar/: BlueBar.hpp  GreenBar.hpp  OutlineBar.hpp  RedBar.hpp
src/: Alien.cpp  BattleState.cpp  Boss.cpp  Bullet.cpp  Camera.cpp  CameraFollower.cpp  ClickBall.cpp  Collider.cpp  Component.cpp  EndState.cpp  Face.cpp  Game.cpp  GameData.cpp  GameObject.cpp  InputManager.cpp  Minion.cpp  Mushroom.cpp  Music.cpp  PenguinBody.cpp  PenguinCannon.cpp  Porco.cpp  Rect.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  StageState.cpp  State.cpp  Text.cpp  TileMap.cpp  TileSet.cpp  TileState.cpp  Timer.cpp  TitleState.cpp  Vec2.cpp  main.cpp
src/Animation/: Animation.cpp  AnimationPhase.cpp
src/Characters/: Alex.cpp  Bargudin.cpp  Ranger.cpp  Warrior.cpp
src/Entities/: Entity.cpp
src/Menu/: ActionMenu.cpp  Button.cpp  HealthBar.cpp  ManaBar.cpp
src/Menu/Buttons/: AttackButton.cpp  DefendButton.cpp  SkillButton.cpp
src/Menu/healthBar/: BlueBar.cpp  GreenBar.cpp  OutlineBar.cpp  RedBar.cpp
src/Penguin/: Alien.cpp  Bullet.cpp  EndState.cpp  Minion.cpp  PenguinBody.cpp  PenguinCannon.cpp  StageState.cpp  TitleState.cpp
src/StateMachine/: xallocator.cpp
src/States/: BattleState.cpp  DifficultyState.cpp  EndState.cpp  TitleState.cpp
src/UI/: ActionMenuSelector.cpp  BlinkingText.cpp  CharacterIndicator.cpp  DamageText.cpp  HealText.cpp  MpGainText.cpp  MpLostText.cpp
src/UI/Menu/: ActionMenu.cpp  HealthBar.cpp  ManaBar.cpp
src/UI/Menu/Buttons/: AttackButton.cpp  DefendButton.cpp  SkillButton.cpp
src/UI/Menu/healthBar/: BlueBar.cpp  GreenBar.cpp  OutlineBar.cpp  RedBar.cpp
